--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -4,28 +4,29 @@ server {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
-    location /api/ {
-        proxy_pass http://host.docker.internal:8000/api/;
-        proxy_set_header Host $host;
-    }
-    location /admin/ {
-        proxy_pass http://host.docker.internal:8000/admin/;
-        proxy_set_header Host $host;
-    }
+    
     location /media/ {
-    alias /media/;
+        alias /app/media/;
     }
-    location /static_backend/ {
-    alias /static_backend/;
+
+    location /static1/ {
+        alias /staticfiles/;
     }
+
+    location /admin/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:8000/admin/;
+    }
+
+    location /api/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:8000;
+    }
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri /index.html;
-        proxy_set_header        Host $host;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        X-Forwarded-Proto $scheme;
       }
       error_page   500 502 503 504  /50x.html;
       location = /50x.html {
